--- a/app/views/railway_stations/show.html.erb
+++ b/app/views/railway_stations/show.html.erb
@@ -5,5 +5,16 @@
   <%= @railway_station.title %>
 </p>
 
+<% if @railway_station.routes == nil %>
+  <p>The station is not included in any route</p>
+<% else %>
+  <p>the station is included in routes:</p>
+  <ul>
+    <% @railway_station.routes.each do |route| %>
+      <li><%= route.title %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= link_to 'Edit', edit_railway_station_path(@railway_station) %> |
 <%= link_to 'Back', railway_stations_path %>
