--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -5,5 +5,31 @@
   <%= @route.title %>
 </p>
 
+<p>
+  <strong> Stations:</strong>
+</p>
+<p>
+  <ul>
+    <% if @route.railway_stations.empty? %>
+      Empty
+    <%else%>
+      <% @route.railway_stations.each do |station| %>
+        <li><%= station.title %></li>
+  </ul>
+  <%end%>
+
+</p>
+<!--<p>-->
+<%# if @route.trains.empty? %>
+<!--  Routes list empty-->
+<%# else %>
+<!--  <ul>-->
+    <%# @route.trains.each do |train| %>
+<!--      <li><%#= train.number %></li>-->
+    <%# end %>
+<!--  </ul>-->
+<%# end %>
+<!--</p>-->
+
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
