--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -20,14 +20,14 @@
   <% end %>
 </p>
 
-<p>
-  <strong>Train on the station:</strong>
-<% if @route.trains.present? %>
-      <%= @route.trains.title %>
-    <% else %>
-      No trains
-  <% end %>
-</p>
+<!--<p>-->
+<!--  <strong>Train on the station:</strong>-->
+<%# if @route.trains.present? %>
+      <%#= @route.trains.title %>
+    <%# else %>
+<!--      No trains-->
+  <%# end %>
+<!--</p>-->
 
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
