--- a/app/views/passenger_cars/show.html.erb
+++ b/app/views/passenger_cars/show.html.erb
@@ -15,5 +15,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_passenger_car_path(@passenger_car) %> |
-<%= link_to 'Back', passenger_cars_path %>
+<!--<%#= link_to 'Edit', edit_passenger_cars_path(@passenger_car) %> |-->
+<%#= link_to 'Back', train_passenger_cars_path %>
