--- a/app/views/passenger_cars/_form.html.erb
+++ b/app/views/passenger_cars/_form.html.erb
@@ -1,14 +1,23 @@
-<%= form_for(@passenger_car) do |f| %>
+<%= form_for [@train, @passenger_car] do |f| %>
 
   <%= render 'common/errors', resourse: @passenger_car %>
 
   <div class="field">
     <%= f.label :car_type %><br>
     <%= f.text_field :car_type %>
+  </div>
+
+  <div class="field">
     <%= f.label :quantity_top_seats %><br>
     <%= f.text_field :quantity_top_seats %>
+  </div>
+
+  <div class="field">
     <%= f.label :quantity_lower_seats %><br>
     <%= f.text_field :quantity_lower_seats %>
+  </div>
+
+  <div class="field">
     <%= f.label :car_number %><br>
     <%= f.text_field :car_number %>
   </div>
@@ -21,5 +30,6 @@
   <div class="actions">
     <%= f.submit "#{ @passenger_car.new_record? ? 'Create' : 'Edite' }" %>
   </div>
+
 <% end %>
 
