--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -7,27 +7,33 @@
 
 <p>
   <strong> Stations:</strong>
+  <% if @route.railway_stations.empty? %>
+    Empty
+  <% else %>
+  <table>
+    <thead>
+    <tr>
+      <td width="100px">Title:</td>
+      <td>Position</td>
+    </tr>
+    </thead>
+    <tbody>
+    <% @route.railway_stations.ordered.each do |station| %>
+      <tr>
+        <td><%= station.title %></td>
+        <td>
+          <% form_tag update_position_railway_station_path(station.id), method: :patch do %>
+          <%= number_field_tag :position %>
+          <%= hidden_field_tag :route_id, @route.id %>
+            <%= submit_tag "Change" %>
+          <% end %>
+        </td>
+      </tr>
+    <% end %>
+    </tbody>
+  </table>
+<% end %>
 </p>
-<p>
-  <ul>
-    <% if @route.railway_stations.empty? %>
-      Empty
-    <% else %>
-      <% @route.railway_stations.each do |station| %>
-        <li><%= station.title %></li>
-      <% end %>
-  </ul>
-  <% end %>
-</p>
-
-<!--<p>-->
-<!--  <strong>Train on the station:</strong>-->
-<%# if @route.trains.present? %>
-      <%#= @route.trains.title %>
-    <%# else %>
-<!--      No trains-->
-  <%# end %>
-<!--</p>-->
 
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
