--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -25,14 +25,15 @@
 
 <p>
   <strong>The train's cars:</strong>
-  <% if @train.passenger_cars.present?%>
-    <%= @train.passenger_cars.map(&:car_type)%>
-    <%= @train.passenger_cars.map(&:quantity_top_seats)%>
-    <%= @train.passenger_cars.map(&:quantity_lower_seats)%>
-  <% else %>
-    The train has no cars
-  <% end %>
+<ul>
+  <li><% @train.passenger_cars.each do |car|%></li>
+      <li><%= link_to "Car №#{car.car_number}", car %></li>
+    <% end %>
+</ul>
 </p>
 
+<p>
+  <%= link_to "Add car", new_train_passenger_car_path(@train) %>
+</p>
 <%= link_to 'Edit', edit_train_path(@train) %> |
 <%= link_to 'Back', trains_path %>
