--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -22,8 +22,12 @@
       <tr>
         <td><%= station.title %></td>
         <td>
-          <% form_tag update_position_railway_station_path(station.id), method: :patch do %>
+          <%= form_tag update_position_railway_station_path(station), method: :patch do %>
+          <%= form_tag update_time_arrive_railway_station_path(station), method: :patch do %>
+          <%= form_tag update_departure_time_railway_station_path(station), method: :patch do %>
           <%= number_field_tag :position %>
+          <%= datetime_field_tag :time_arrive %>
+          <%= datetime_field_tag :departure_time %>
           <%= hidden_field_tag :route_id, @route.id %>
             <%= submit_tag "Change" %>
           <% end %>
