--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -31,6 +31,8 @@
           <%= hidden_field_tag :route_id, @route.id %>
             <%= submit_tag "Change" %>
           <% end %>
+            <% end %>
+          <% end %>
         </td>
       </tr>
     <% end %>
