--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_for [ @route] do |f| %>
+<%= form_for (@route) do |f| %>
   <%= render 'common/errors', resourse: @route %>
 
   <div class="field">
