--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -13,8 +13,10 @@
   <table>
     <thead>
     <tr>
-      <td width="100px">Title:</td>
+      <td width="60px">Title:</td>
       <td>Position</td>
+      <td>Time array</td>
+      <td>Departure time</td>
     </tr>
     </thead>
     <tbody>
@@ -22,16 +24,18 @@
       <tr>
         <td><%= station.title %></td>
         <td>
-          <%= form_tag update_position_railway_station_path(station), method: :patch do %>
-          <%= form_tag update_time_arrive_railway_station_path(station), method: :patch do %>
-          <%= form_tag update_departure_time_railway_station_path(station), method: :patch do %>
+          <%= form_tag update_position_railway_station_path(station), method: :patch, class: 'form-group' do %>
           <%= number_field_tag :position %>
-          <%= datetime_field_tag :time_arrive %>
-          <%= datetime_field_tag :departure_time %>
           <%= hidden_field_tag :route_id, @route.id %>
             <%= submit_tag "Change" %>
           <% end %>
-            <% end %>
+        </td>
+        <td>
+          <%= form_tag update_time_railway_station_path(station), method: :patch, class: 'form-group' do %>
+            <%= datetime_field_tag :time_arrive %>
+            <%= datetime_field_tag :departure_time %>
+            <%= hidden_field_tag :route_id, @route.id %>
+            <%= submit_tag "Change" %>
           <% end %>
         </td>
       </tr>
