--- a/app/views/trains/show.html.erb
+++ b/app/views/trains/show.html.erb
@@ -31,7 +31,11 @@
     <% end %>
 </ul>
 </p>
+    <p>First station:</p>
+    <input type="text" size="30">
 
+    <p>Last station:</p>
+    <input type="text" size="30">
 <p>
   <%= link_to "Add car", new_train_passenger_car_path(@train) %>
 </p>
