--- a/app/views/trains/_form.html.erb
+++ b/app/views/trains/_form.html.erb
@@ -11,6 +11,11 @@
     <%= f.collection_select :current_station_id, RailwayStation.all, :id, :title %>
   </div>
 
+  <div class="field">
+    <%= f.label :current_route %>
+    <%= f.collection_select :current_route_id, Route.all, :id, :title %>
+  </div>
+
   <div class="actions">
     <%= f.submit "#{ @train.new_record? ? 'Create' : 'Edite' }" %>
   </div>
