--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -2,12 +2,13 @@
 
 <h1>Listing Trains</h1>
 <p>
-  <%= form_tag(method: "get") do %>
+  <%= form_tag ({:controller => 'trains', :action => 'index'}, :method => 'get') do %>
     <%= label_tag(:title, "Test cur station:") %>
     <%= text_field_tag(:title) %>
     <%= submit_tag("Search") %>
   <% end %>
 </p>
+
 <table>
   <thead>
     <tr>
