--- a/app/views/trains/index.html.erb
+++ b/app/views/trains/index.html.erb
@@ -1,10 +1,9 @@
 <p id="notice"><%= notice %></p>
-
 <h1>Listing Trains</h1>
 <p>
-  <%= form_tag ({:controller => 'trains', :action => 'index'}, :method => 'get') do %>
-    <%= label_tag(:title, "Test cur station:") %>
-    <%= text_field_tag(:title) %>
+  <%= form_tag({:controller => 'trains', :action => 'index'}, :method => 'get') do %>
+    <%= label_tag(:q, "Test cur station:") %>
+    <%= text_field_tag(:q) %>
     <%= submit_tag("Search") %>
   <% end %>
 </p>
