--- a/app/views/admin/trains/show.html.erb
+++ b/app/views/admin/trains/show.html.erb
@@ -32,5 +32,6 @@
 </ul>
   <%= link_to "Add car", new_train_passenger_car_path(@train) %>
 </p>
+<%= link_to 'Buy ticket', tickets_path, method: :post %> |
 <%= link_to 'Edit', edit_train_path(@train) %> |
 <%= link_to 'Back', trains_path %>
