--- a/app/views/admin/passenger_cars/edit.html.erb
+++ b/app/views/admin/passenger_cars/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Passenger car</h1>
+<h1>Редактирование вагона</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @passenger_car %> |
-<%= link_to 'Back', passenger_car_path %>
+<%= link_to t('common.show'), @passenger_car %> |
+<%= link_to t('common.back'), admin_passenger_car_path %>
