--- a/app/views/admin/passenger_cars/new.html.erb
+++ b/app/views/admin/passenger_cars/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Passenger car</h1>
+<h1>Новый вагон</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', train_passenger_cars_path %>
+<%= link_to t('common.back'), admin_train_passenger_cars_path %>
