--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -1,14 +1,13 @@
-<%= form_for(@railway_station) do |f| %>
+<%= form_for ([:admin, @railway_station]) do |f| %>
 
   <%= render 'common/errors', resourse: @railway_station %>
 
   <div class="field">
-    <%= f.label :title %><br>
+    <%= f.label :title, "Название станции"%><br>
     <%= f.text_field :title %>
   </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit t('.submit', action: @railway_station.new_record? ? 'Создать' : 'Изменить') %>
   </div>
-
 <% end %>
