--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @railway_station %> |
-<%= link_to 'Back', railway_stations_path %>
+<%= link_to t('common.show'), [:admin, @railway_station] %> |
+<%= link_to t('common.back'), admin_railway_stations_path %>
