--- a/app/views/admin/railway_stations/index.html.erb
+++ b/app/views/admin/railway_stations/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing Railway Stations</h1>
+<h1>Станции:</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Title</th>
+      <th>Название</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,4 +15,4 @@
 
 <br>
 
-<%= link_to 'New Railway station', new_admin_railway_station_path %>
+<%= link_to 'Новая станция', new_admin_railway_station_path %>
