--- a/app/views/admin/railway_stations/show.html.erb
+++ b/app/views/admin/railway_stations/show.html.erb
@@ -16,5 +16,5 @@
   </ul>
 <% end %>
 
-<%= link_to 'Edit', edit_railway_station_path(@railway_station) %> |
-<%= link_to 'Back', railway_stations_path %>
+<%= link_to t('common.edit'), edit_admin_railway_station_path(@railway_station) %> |
+<%= link_to t('common.back'), admin_railway_stations_path %>
