--- a/app/views/admin/routes/index.html.erb
+++ b/app/views/admin/routes/index.html.erb
@@ -1,9 +1,9 @@
-<h1>Listing Routes</h1>
+<h1>Дороги:</h1>
 
 <table>
   <thead>
   <tr>
-    <th>Title</th>
+    <th>Название дорог</th>
     <th colspan="3"></th>
   </tr>
   </thead>
@@ -12,9 +12,9 @@
   <% @routes.each do |route| %>
     <tr>
       <td><%= route.title %></td>
-      <td><%= link_to 'Show', route_path(route) %></td>
-      <td><%= link_to 'Edit', edit_route_path(route) %></td>
-      <td><%= link_to 'Destroy', route, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <td><%= link_to t('common.show'), admin_route_path(route) %></td>
+      <td><%= link_to t('common.edit'), edit_admin_route_path(route) %></td>
+      <td><%= link_to t('common.destroy'), [:admin, route], method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
   </tbody>
@@ -22,4 +22,4 @@
 
 <br>
 
-<%= link_to 'New Route', new_route_path %>
+<%= link_to 'Новя дорога', new_admin_route_path %>
