--- a/app/views/admin/trains/_form.html.erb
+++ b/app/views/admin/trains/_form.html.erb
@@ -1,22 +1,22 @@
-<%= form_for(@train) do |f| %>
+<%= form_for([:admin, @train]) do |f| %>
   <%= render 'common/errors', resourse: @train%>
 
   <div class="field">
-    <%= f.label :number %><br>
+    <%= f.label :number, "Номер поезда"%><br>
     <%= f.text_field :number %>
   </div>
 
   <div class="field">
-    <%= f.label :current_station %>
+    <%= f.label :current_station, "Текущая стация"%>
     <%= f.collection_select :current_station_id, RailwayStation.all, :id, :title %>
   </div>
 
   <div class="field">
-    <%= f.label :current_route %>
+    <%= f.label :current_route, "Дорога"%>
     <%= f.collection_select :current_route_id, Route.all, :id, :title %>
   </div>
 
   <div class="actions">
-    <%= f.submit "#{ @train.new_record? ? 'Create' : 'Edite' }" %>
+    <%= f.submit t('.submit', action: @train.new_record? ? 'Создать' : 'Изменить') %>
   </div>
 <% end %>
