--- a/app/views/admin/trains/edit.html.erb
+++ b/app/views/admin/trains/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Train</h1>
+<h1>Редактирование поезда</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @train %> |
-<%= link_to 'Back', trains_path %>
+<%= link_to t('common.show'), [:admin, @train] %> |
+<%= link_to t('common.back'), admin_trains_path %>
