--- a/app/views/admin/trains/index.html.erb
+++ b/app/views/admin/trains/index.html.erb
@@ -1,16 +1,16 @@
-<h1>Listing Trains</h1>
+<h1>Поезда:</h1>
 
 
 <p>
   <%= form_tag({:controller => 'trains', :action => 'index'}, :method => 'get') do %>
-    <%= label_tag(:q, "First station:") %>
+    <%= label_tag(:q, "Первая станция:") %>
     <%= text_field_tag(:q) %>
   <% end %>
 </p>
 
 <p>
   <%= form_tag({:controller => 'trains', :action => 'index'}, :method => 'get') do %>
-    <%= label_tag(:p, "Last station:") %>
+    <%= label_tag(:p, "Последняя станция:") %>
     <%= text_field_tag(:p) %>
     <%= submit_tag("Search") %>
   <% end %>
@@ -19,7 +19,7 @@
 <table>
   <thead>
     <tr>
-      <th>Number</th>
+      <th>Номер поезда</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -31,5 +31,5 @@
 
 <br>
 
-<%= link_to 'New Train', new_train_path %>
+<%= link_to 'Новый поезд', new_admin_train_path %>
 
