--- a/app/views/admin/trains/show.html.erb
+++ b/app/views/admin/trains/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Number:</strong>
+  <strong>Номер поезда:</strong>
   <%= @train.number %>
 </p>
 
 <p>
-  <strong>On the station:</strong>
+  <strong>На станции:</strong>
   <% if @train.current_station.present?%>
     <%= @train.current_station.title %>
   <% else %>
@@ -15,7 +15,7 @@
 </p>
 
 <p>
-  <strong>The train's route:</strong>
+  <strong>Дорога поезда:</strong>
   <% if @train.route.present?%>
     <%= @train.route.title %>
   <% else %>
@@ -24,14 +24,14 @@
 </p>
 
 <p>
-  <strong>The train's cars:</strong>
+  <strong>Вагоны поезда:</strong>
 <ul>
       <% @train.passenger_cars.each do |car|%>
-      <li><%= link_to "Car №#{car.car_number}", car %></li>
+        <li><%= link_to "Car №#{car.car_number}", [:admin, car] %></li>
     <% end %>
 </ul>
-  <%= link_to "Add car", new_train_passenger_car_path(@train) %>
+  <%= link_to "Add car", new_admin_train_passenger_car_path(@train) %>
 </p>
 <%= link_to 'Buy ticket', tickets_path, method: :post %> |
-<%= link_to 'Edit', edit_train_path(@train) %> |
-<%= link_to 'Back', trains_path %>
+<%= link_to t('common.edit'), edit_admin_train_path(@train) %> |
+<%= link_to t('common.back'), admin_trains_path %>
