--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,18 +45,18 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
+
         <a class="navbar-brand" href="#">Trip</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
             <% if user_signed_in? %>
-            <li><%= link_to "Станции", admin_railway_stations_path %></li>
-            <li><%= link_to "Дороги", admin_routes_path %></li>
-            <li><%= link_to "Поезда", admin_trains_path %></li>
-            <li><%= link_to "Выйти", destroy_user_session_path, method: :delete %></li>
-               <% if current_user.admin? %>
-             <li><%= link_to "Админка", admin_railway_stations_path %></li>
-               <% end %>
-               <% else %>
+              <li><%= link_to "Выйти", destroy_user_session_path, method: :delete %></li>
+              <% if current_user.admin? %>
+                <li><%= link_to "Станции", admin_railway_stations_path %></li>
+                <li><%= link_to "Дороги", admin_routes_path %></li>
+                <li><%= link_to "Поезда", admin_trains_path %></li>
+              <% end %>
+              <% else %>
               <li><%= link_to "Войти", new_user_session_path  %></li>
              <% end %>
           </ul>
@@ -73,11 +73,16 @@
 
       </div><!--/row-->
 
-      <footer>
-        <p>
-          (с) 2018 Alokhina Mariia. Project <a href="https://github.com/MariiaAlehina/trip"> code</a>
-         </p>
-      </footer>
+    <footer class="footer">
+
+      <!-- Copyright -->
+      <div class="footer-copyright text-center py-3">© 2018 Alokhina Mariia. Project:
+        <a href="https://github.com/MariiaAlehina/trip"> Code</a>
+      </div>
+      <!-- Copyright -->
+
+    </footer>
+
 
     </div> <!-- /container -->
 
